# GtkPlot

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  TODO  configure.ac  gtk2plot.pc.in  gtkplot.pc.in  plotlinear0-1-0.c  plotlinear0-1-0.h  plotlinearboth0-1-0.c  plotlinearboth0-1-0.h  plotlinearlines0-1-0.c  plotlinearlines0-1-0.h  plotlinearlog0-1-0.h  plotlinearlogboth0-1-0.h  plotlinearloglines0-1-0.h  plotlinearlogpoints0-1-0.h  plotlinearpoints0-1-0.c  plotlinearpoints0-1-0.h  plotloglinear0-1-0.h  plotloglinearboth0-1-0.h  plotloglinearlines0-1-0.h  plotloglinearpoints0-1-0.h  plotloglog0-1-0.h  plotloglogboth0-1-0.h  plotlogloglines0-1-0.h  plotloglogpoints0-1-0.h  plotpolar0-1-0.h  plotpolarboth0-1-0.h  plotpolarlines0-1-0.h  plotpolarpoints0-1-0.h  reversion.sh  testplotlinear  testplotlinear0-1-0.c
PlotLinear/: Makefile.am  configure.ac  testplotlinear
PlotLinear/src/: Makefile.am  plotlinear0-1-0.c  plotlinear0-1-0.h  plotlinearboth0-1-0.c  plotlinearlines0-1-0.c  plotlinearpoints0-1-0.c  testplotlinear0-1-0.c
PlotLog/: Makefile.am  configure.ac
PlotLog/src/: Makefile.am  plotlinearlogboth0-1-0.h  plotlinearloglines0-1-0.h  plotloglinearlines0-1-0.h  plotlogloglines0-1-0.h
PlotPolar/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  testplotpolar  testplotpolar0-1-0.c~  testplotpolar0-1-0.h~
PlotPolar/autom4te.cache/: output.0  traces.0  traces.1
PlotPolar/src/: Makefile  Makefile.am  Makefile.in  TestPolarPlot  plotpolar0-0-8.c  plotpolar0-1-0.c  plotpolar0-1-0.c~  plotpolar0-1-0.h  plotpolar0-1-0.h~  plotpolarboth0-1-0.h  plotpolarlines0-1-0.h  plotpolarpoints0-1-0.h  testplotpolar0-1-0.c  testplotpolar0-1-0.c~  testplotpolar0-1-0.h  testplotpolar0-1-0.h~
PlotPolar/src/.deps/: plotpolar0-1-0.Po  testplotpolar0-1-0.Po
SPECS/: gtk2plot-2.0.0.spec  gtk3plot-3.0.0.spec
debian/: Makefile.am  README  changelog  control  control.in  copyright  copyright.in  libgtkplot-2-doc.install  libgtkplot-3-doc.install  libgtkplot-dev.dirs.in  libgtkplot-dev.install.in  libgtkplot.install.in  postinst  postrm  preinst  prerm  rules  shlibs.local  shlibs.local.in
gtk2plot/: Makefile.am  gtkplot.c  gtkplot.h  gtkplotdonut.c  gtkplotdonut.h  gtkplotlinear.c  gtkplotlinear.h  gtkplotloglinear.c  gtkplotloglinear.h  gtkplotloglog.c  gtkplotloglog.h  gtkplotpolar.c  gtkplotpolar.h  gtkplotsurf3.c  gtkplotsurf3.h  gtksurf3d.c  gtksurf3d.h  plotpolar.c  testPlotLogLinear  testplotdonut.c  testplotlinear.c  testplotloglinear.c  testplotpolar.c
gtk3plot/: Makefile.am  gtkplot.c  gtkplot.h  gtkplotdonut.c  gtkplotdonut.h  gtkplotlinear.c  gtkplotlinear.h  gtkplotpolar.c  gtkplotpolar.h  testplotlinear.c  testplotpolar.c
gtk3plot/a11y/: gtkplotaccessible.c  gtkplotaccessible.h  gtkplotdonutaccessible.c  gtkplotdonutaccessible.h  gtkplotlinearaccessible.c  gtkplotlinearaccessible.h  gtkplotpolaraccessible.c  gtkplotpolaraccessible.h
gtkplot/: plotlinear.c  plotlinearlog.h  plotpolar.h  testplotlinear.c  testplotpolar.c
