AC_PREREQ([2.63])
AC_INIT([Gtk2Plot],[2.0.0],[pchilds@physics.org],[gtk2plot],[https://github.com/pchilds/GtkPlot])
AC_CONFIG_HEADERS([config.h gtkplotconfig.h])
AC_CONFIG_SRCDIR([gtk2plot/gtkplot.h])
AC_CONFIG_AUX_DIR([confsupp])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_CC([gcc cc])
LT_PREREQ([2.2])
LT_INIT([win32-dll])
AC_SUBST([PLOT_API_VERSION], [2.0])
AC_SUBST([PLOT_GTK_MAJOR], [2])
AC_SUBST([PLOT_GTK_MINOR], [18])
AC_SUBST([PLOT_SDIR], [gtk2plot])
lt_enable_auto_import=
case "$host_os" in
   mingw*)
      lt_enable_auto_import="-Wl,--enable-auto-import"
esac
AC_SUBST([lt_enable_auto_import])
AC_ARG_ENABLE([testbinaries],AS_HELP_STRING([--disable-testbinaries],[Disable building test examples -incompatible with some packaging  @<:@yes/no@:>@]),,[enable_testbinaries=yes])
AM_CONDITIONAL([TEST_BIN], [test "$enable_testbinaries" = "yes"])
AC_ARG_ENABLE([base],AS_HELP_STRING([--disable-base],[Do not include the base plotlinear widget  @<:@yes/no@:>@]),,[enable_base=yes])
AM_CONDITIONAL([BASE], [test "$enable_base" = "yes"])
AC_ARG_ENABLE([polars],AS_HELP_STRING([--disable-polar],[Do not include polar plots  @<:@yes/no@:>@]),,[enable_polars=yes])
AM_CONDITIONAL([POLARS], [test "$enable_polars" = "yes"])
AC_ARG_ENABLE([logarithms],AS_HELP_STRING([--disable-logarithms],[Do not include logarithmic plots  @<:@yes/no@:>@]),,[enable_logarithms=yes])
AM_CONDITIONAL([LOGARS], [test "$enable_logarithms" = "yes"])
AC_ARG_ENABLE([plot_3d],AS_HELP_STRING([--disable-plot-3d],[Do not include 3D plots  @<:@yes/no@:>@]),,[enable_plot_3d=yes])
AM_CONDITIONAL([PL3D], [test "$enable_plot_3d" = "yes"])
AC_ARG_ENABLE([miscs],AS_HELP_STRING([--disable-miscs],[Do not include other miscelaneous plots  @<:@yes/no@:>@]),,[enable_miscs=yes])
AM_CONDITIONAL([MISCS], [test "$enable_miscs" = "yes"])
AS_IF([test "$enable_plot_3d" = "yes"],[PKG_CHECK_MODULES([PLOT], [gtk+-2.0 >= 2.18 gtkglext-1.0])],[PKG_CHECK_MODULES([PLOT], [gtk+-2.0 >= 2.18])])
AC_CONFIG_FILES([Makefile gtk2plot/Makefile	\
	gtkplot-2.0.pc:gtkplot.pc.in		\
	COPYING:COPYING-2.0.in])
AC_CONFIG_FILES([debian/Makefile])
AC_OUTPUT()
