AC_PREREQ([2.65])
AC_INIT([GtkPlot],[0.1.0],[pchilds@physics.org],[gtk-plot],[https://github.com/pchilds/GtkPlot])
AC_CONFIG_SRCDIR([src/testplotlog0-1-0.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC([gcc cc])
AC_CONFIG_HEADERS([config.h])
PKG_CHECK_MODULES([LOG], [gtk+-2.0 >= 2.14])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT()
