## Process this file with automake to produce Makefile.in
AM_CFLAGS=$(LOG_CFLAGS)
bin_PROGRAMS=TestLogPlot
TestLogPlot_SOURCES=	\
	testplotlog0-1-0.c	\
	plotloglog0-1-0.c	\
	plotloglinear0-1-0.c	\
	plotlinearlog0-1-0.c	\
	testplotlog0-1-0.h	\
	plotloglog0-1-0.h	\
	plotloglinear0-1-0.h	\
	plotlinearlog0-1-0.h
TestLogPlot_LDADD=$(LOG_LIBS)
